--- a/sistem/templates/Consultas/crear_consulta.html
+++ b/sistem/templates/Consultas/crear_consulta.html
@@ -22,18 +22,22 @@
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
 
-                       <div class="form-group">
+                        <div class="form-group">
                             <label>Paciente: </label>
                             {{ ConsultaForm.paciente }}
-                       </div><br>
-                       <div class="form-group">
+                        </div><br>
+                        <div class="form-group">
                             <label>Precio: </label>
                             {{ ConsultaForm.precioconsulta }}
-                       </div><br>
-                       <div class="form-group">
+                        </div><br>
+                        <div class="form-group">
+                            <label>Consulta por: </label>
+                            {{ ConsultaForm.tipo }}
+                        </div><br>
+                        <div class="form-group">
                             <label>Observaciones: </label>
                             {{ConsultaForm.observaciones }}
-                       </div><br>
+                        </div><br>
                        
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary">Guardar</button>
