--- a/sistem/templates/index.html
+++ b/sistem/templates/index.html
@@ -14,7 +14,6 @@
     
     <!--Archivos estaticos CSS y JavaScript-->
     <link rel="stylesheet" href="../../static/style.css" >
-    <link rel="stylesheet" href="../../static/script.js" >
     <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 <body>
@@ -24,12 +23,10 @@
         </div>
         <ul id="menuList">
             <li><a class="d-block text-light p-3" href="/pacientes/" >Pacientes</a>
-            </li>
             <li><a class="d-block text-light p-3" href="/consultas/">Consultas</a></li>
-            <li><a class="d-block text-light p-3" href="/usuarios/">Usuarios</a></li>
             <li><a class="d-block text-light p-3" href="">Ejercicios</a></li>
             <li><a class="d-block text-light p-3" href="/citas/">Citas</a></li>
-            <li><a class="d-block text-light p-3" href="">Estadisticas</a></li>
+            <li><a class="d-block text-light p-3" href="/estadisticas/">Estadisticas</a></li>
             
         </ul>
         <div class="menu-icon">
@@ -63,6 +60,6 @@
         </div>
    </div>
     <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="../../static/script.js" >
 </body>
 </html>
