--- a/sistem/static/style.css
+++ b/sistem/static/style.css
@@ -72,3 +72,9 @@ nav ul li a{
         transition: all 0.5s;
     }
 }
+
+.contenedorE{
+    height: 49%;
+    background-color: #6A737C;
+    margin: 1% 1%;
+  }
