--- a/sistem/static/style.css
+++ b/sistem/static/style.css
@@ -84,3 +84,14 @@ nav ul li a{
   /* DISENO PARA VENTANA EMERGENTE*/
 
   
+  .sidebar{
+    width: 60px;
+    height: 100%;
+    background-color: #1877f2;
+    padding: 20px;
+    box-sizing: border-box;
+    color: #fff;
+    overflow: hidden;
+    border-radius: 5px 0 0 5px;
+    transition: width .75s ease;
+  }
