--- a/sistem/templates/citas/citas.html
+++ b/sistem/templates/citas/citas.html
@@ -3,8 +3,6 @@
 {% block title %} | Citas {% endblock title %}
 
 {% block content %}
-
-<h3 id="HoraActual">hola</h3> 
 <div class="container">
     <div class="text-center">
         <h1>Citas de: {{mes}} </h1>
@@ -40,8 +38,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -55,8 +52,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -70,8 +66,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -85,8 +80,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -100,8 +94,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -115,8 +108,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -130,8 +122,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -145,8 +136,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
@@ -160,8 +150,7 @@
                                     {% if cita == 2 %}
                                         <h6 style="color: crimson;">disponible</h6>
                                         {% else %}
-                                            <h6>{{cita.paciente.nombre}}</h6>
-                                            <!--<a class="btn btn-primary" href="/editarcita/{{cita.idcita}}/">.</a>-->
+                                            <a class="btn btn-sm" href="/editarcita/{{cita.idcita}}/"><h6>{{cita.paciente.nombre}}</h6></a>
                                 {% endif %}
                             {% endif %}                                    
                     </td>
