--- a/sistem/templates/registration/login.html
+++ b/sistem/templates/registration/login.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Inicio de sesion</title>
 </head>
 <body>
-    Incio de sesion requerido
-</body>
-<form method="post">
-    {% csrf_token %}
-    <label for="usuario">
-        usuario: 
-        <input type="text" name="username">
-    </label>
-    <label for="password">
-        password: 
-        <input type="password" name="password">
-    </label>
-    <button type="submit">Iniciar sesion</button>
-</form>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    {% load crispy_forms_tags %}
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 offset-md-3">
+                <div class="car">
+                    <div class="card-body">
+                        <h2>Ingresa tus credenciales</h2>
+                        <hr>
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{ form|crispy}}
+                            <input type="submit" value="ingresar" class="btn btn-success float-right">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+ </body>   
 </html>
